Fix iframes on mobile #2

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -26,6 +26,10 @@ iframe {
     max-width: 100%;
 }
 
+.cp_embed_wrapper {
+    max-width: 100% !important;
+}
+
 code {
 	background: var(--brand-color);
 }
